# gtest_ci_sample

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile.ci  README.md
src/: mylib.cpp  mylib.h
test/: CMakeLists.txt  test_mylib.cpp
